; ModuleID = '/home/carl/AnghaBench/php-src/ext/date/extr_php_date.c_php_date_short_day_name.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/date/extr_php_date.c_php_date_short_day_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1
@day_short_names = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i64, i64)* @php_date_short_day_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @php_date_short_day_name(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = call i64 @timelib_day_of_week(i64 %9, i64 %10, i64 %11)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %8, align 8
  %14 = icmp ult i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  br label %21

16:                                               ; preds = %3
  %17 = load i8**, i8*** @day_short_names, align 8
  %18 = load i64, i64* %8, align 8
  %19 = getelementptr inbounds i8*, i8** %17, i64 %18
  %20 = load i8*, i8** %19, align 8
  store i8* %20, i8** %4, align 8
  br label %21

21:                                               ; preds = %16, %15
  %22 = load i8*, i8** %4, align 8
  ret i8* %22
}

declare dso_local i64 @timelib_day_of_week(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
